Resolve merge conflicts: Restore Builder pattern tests and InAppNotificationTest